a change that reverted the vertical issue, yet did not make the white space disappear

--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ span.magnify {
 
 table {
     border: 1px solid lightgrey;
-    white-space: normal;
+    white-space: unset;
     width: auto;
 }
 
